--- a/css/selectores.css
+++ b/css/selectores.css
@@ -1,8 +1,8 @@
 .selectores-categorias{
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Inconsolata', monospace;
     margin-top: 20px ;
     width: 100%;
-    height: 300px;
+    height: 370px;
     background-color: #0059ff;
     display: flex;
     flex-direction: column;
@@ -12,8 +12,9 @@
     text-align: center;
     font-size: 30px;
     height: 60px;
-    font-family: 'Josefin Sans', sans-serif;
-    background-color: #97c5da;
+    font-family: 'Inconsolata', monospace;
+    border-top: black 1px solid;
+    border-bottom: black 1px solid;
 }
 .titulo-categoriaUno h3{
     position: relative;
@@ -22,47 +23,72 @@
 }
 .productos, .producto-seleccionado{
     width: 100%;
-        height: 320px;
+        height: 390px;
         display: flex;
-        margin: 1rem;
+        
         overflow-x: auto;
         overflow-y: hidden;
+        color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.116);
 }
 .productos img {
-    width: 100%;
+    position: relative;
+    top: 20px;
+    width: 95%;
+    height: 55%;
 }
-.article-producto-2{
+
+.article-producto .ver, .article-producto-2 .ver{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    width: 50%;
+}
+.article-producto .star, .article-producto-2 .star{
+    margin-left: 33px;
+
+    color: rgb(255, 185, 73);
+}
+.article-producto .star i, .article-producto-2 .star i{
+    margin-left: 3px;
+}
+.article-producto a, .article-producto-2 a{
+    
+    position: relative;
+    top: 30px;
+    font-size: 10px;
+    text-decoration: none;
+    padding-left: 12px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 12px;
+    box-shadow: rgba(0, 0, 0, 0.198) 1px 0px 0px 0px;
+    color: #000000;
+    border: rgba(0, 0, 0, 0.466) 1px solid;
+}
+
+
+.article-producto, .article-producto-2  {
     box-shadow: rgba(0, 0, 0, 0.267) 3px 3px 10px;
     position: relative;
     margin: 1rem;
     margin-bottom: 25px;
     margin-top: 20px;
-    max-width: 17%;
-    min-width: 15%;
-    height: 270px;
-    background-color: #e6d0ad;
-    border-radius: 10px;
-}
-.article-producto  {
-    box-shadow: rgba(0, 0, 0, 0.267) 3px 3px 10px;
-    position: relative;
-    margin: 1rem;
-    margin-bottom: 25px;
-    margin-top: 20px;
-    max-width: 17%;
-    min-width: 15%;
-    height: 270px;
-    background-color: #f5d49e;
-    border-radius: 10px;
+    max-width: 20%;
+    min-width: 12%;
+    height: 339px;
+    background-color: #ffffff;
+    
 }
 .article-producto h2, .article-producto-2 h2, .article-search h2{
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Inconsolata', monospace;
     text-align: center;
+    font-size: 18px;
     margin-bottom: 15px;
     margin-top: 5px;
 }
 .article-producto h6, .article-producto-2 h6, .article-search h6{
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Inconsolata', monospace;
     text-align: center;
     margin-top: 20px;
 }
