--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,23 @@
 *{
     margin: 0;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Inconsolata', monospace;
+    
 }
 .nav{
     background-color: #467195;
-    font-family: 'Josefin Sans', sans-serif;
+    
     width: 100%;
-    height: 60px;
+    height: 50px;
     display: flex;
+    justify-content: space-around;
 }
 .nav h1{
-    text-align: center;
-    margin: auto;
+    text-align: start;
+    margin-top: 5px;
     font-size: 35px;
     color: #fff;
+}
+.nav h6{
+    margin-top: 20px;
+    color: rgb(255, 255, 255);
 }
