--- a/css/items-nav.css
+++ b/css/items-nav.css
@@ -20,3 +20,43 @@
     
     list-style: none;
 }
+
+.submenu {
+    cursor: pointer;
+    position: absolute;
+    background: #dbdbdbf1;
+    font-family: 'gagalin';
+    z-index: 1;
+    border-radius: 3px;
+    margin: auto;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity .2s;
+    text-align: start;
+    list-style: none;
+    
+}
+.submenu a{
+    color: rgb(0, 0, 0);
+    font-size: 13px;
+    
+}
+.submenu li {
+    position: relative;
+    right: 30px;
+    padding: 8px;
+    margin-top: 15px;
+}
+.submenu li:hover {
+    border-top: black 1px solid;
+    border-bottom: black 1px solid;
+    background-color: rgb(228, 227, 227);
+}
+
+
+
+.ul-items li:hover .submenu {
+    visibility: visible;
+    opacity: 1;
+
+}
