--- a/css/cont-botones.css
+++ b/css/cont-botones.css
@@ -24,8 +24,13 @@
 .buscador input{
     width: 250px;
     height: 35px;
-    border-radius: 10px;
+    border-bottom: 1px solid black;
+    border-right: none;
+    border-top: none;
+    border-left: none;
     list-style: none;
+    text-decoration: none;
+    
 }
 .buscador .fas{
 font-size: 30px;
